# supersonic-juce

./: .gitmodules  CMakeLists.txt  application.cpp  application.hpp  audioClipWindow.cpp  audioClipWindow.hpp  clipAreaWindow.cpp  clipAreaWindow.hpp  globalSettings.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  rulerWindow.cpp  rulerWindow.hpp  trackHeaderAreaWindow.cpp  trackHeaderAreaWindow.hpp
